[package]
name = "concurrent_tor"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
serde = { version = "1.0.210", features = ["derive"] }
log = "0.4.22"
tracing-subscriber = "0.3.18"
toml = "0.8.1"
chrono = "0.4.38"
async-trait = "0.1.82"
serde_json = "1.0.128"
murmur3 = "0.5.2"
simple_logger = "5.0.0"
dotenv = "0.15.0"
strum = "0.26.3"
strum_macros = "0.26.3"

arti-client = "0.22.0"
http-body-util = "0.1.0"
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-native-tls = "0.3.1"
tor-rtcompat = "0.22.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
arti = { version = "1.2.7", features = ["experimental-api"] }
tor-config = "0.22.0"

reqwest = { version = "0.12.8", features = ["json"] }
quanta = "0.12.3"

headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
    "fetch",
] }
failure = "0.1.8"
anyhow = "1.0.89"
libc = "0.2.158"
