[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[dependencies]
concurrent_tor = { path = "../../" }
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"
tokio = { version = "1.10.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"