[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[features]
use_tor_backend = []

[dependencies]
concurrent_tor = { path = "../../" }
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"
tokio = { version = "1.10.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }

anyhow = "1.0.89"
serde_json = "1.0"
futures = "0.3"
async-channel = "2.3.1"
rand = "0.8.5"
strum = "0.26.1"